# obj_loader

./: CMakeLists.txt  README.md
.cache/clangd/index/: ShaderProgram.cpp.5D907EE4E97251ED.idx  ShaderProgram.hpp.5240DF71B97DB8F3.idx  glad.c.46675F81DF78A18A.idx  glad.h.07C12CE3A251D1A2.idx  globals.hpp.661FEF2B2C6AE81D.idx  khrplatform.h.260FA2028A3D1075.idx  main.cpp.FCD187A7D778DE43.idx
assets/shaders/cube_shaders/: cube_fragment.glsl
assets/shaders/model_shaders/: model_fragment.glsl
include/: Camera.hpp  EBO.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  ShaderProgram.hpp  Texture.hpp  Utils.hpp  VAO.hpp  VBO.hpp  Vertex.hpp  fall_back.hpp  globals.hpp
resources/shaders/: simple_cube_fragment.glsl  simple_cube_vertex.glsl
resources/shaders/cube_shaders/: cube_fragment.glsl  cube_vertex.glsl
resources/shaders/light_shaders/: light_fragment.glsl  light_vertex.glsl
resources/shaders/model_shaders/: model_fragment.glsl  model_vertex.glsl
src/: Camera.cpp  EBO.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  ShaderProgram.cpp  Texture.cpp  Utils.cpp  VAO.cpp  VBO.cpp  main.cpp
